--- a/functions/test-db/json2/scvo/templates/pages/page-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-digital.hbs
@@ -18,6 +18,46 @@
             </div>
         </div>
     </div>
+    <!-- <div class="basic-digital-skills callout">
+        <div class="container-fluid">
+            <div class="mdc-layout-grid">
+                <div class="mdc-layout-grid__inner">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                        <h2>Basic Digital Skills Framework Consultation</h2>
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <h3>SCVO response</h3>
+                        <p>
+                            We welcome the opportunity to feed into the consultation on the
+                            Basic Digital Skills Framework led by Tech Partnership and Lloyds Bank.
+                            <a href="#">Read our response to the consultation</a>
+                        </p>
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <h3>Get involved!</h3>
+                        <p>
+                            Attend our event on the 00th of Month at the Venue in City.
+                        </p>
+                        <a href="#" class="mdc-button mdc-button--raised">Find out more</a>
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <h3>&nbsp;</h3>
+                        <p>
+                            Influence our submission - we want to hear your views.
+                        </p>
+                        <a href="#" class="mdc-button mdc-button--raised">Contact us</a>
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                        <h3>&nbsp;</h3>
+                        <p>
+                            Submit your own response to the consultation.
+                        </p>
+                        <a href="#" class="mdc-button mdc-button--raised">Submit your response</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
     <div class="digital-participation callout">
         <div class="container-fluid">
             <div class="mdc-layout-grid">
