--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1729,6 +1729,13 @@ section.search {
         color: white;
     }
 }
+.digital .basic-digital-skills.callout {
+    background-color: #fae8d6;
+    h2,
+    h3 {
+        margin: 0;
+    }
+}
 .splash-image .splash-overlay .container-fluid {
     overflow: hidden;
     position: relative;
