--- a/functions/test-db/json2/scvo/partials/menu-setting-up.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-setting-up.hbs
@@ -1,16 +1,16 @@
 <nav class="menu-sidebar" id="setting-up-a-charity-menu">
-    {{#each context.menus.setting-up-a-charity}}
-    <a class="menu-level-1 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children}}
-    <a class="menu-level-2 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children}}
-    <a class="menu-level-3 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children}}
-    <a class="menu-level-4 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{/each}}
-    {{/each}}
-    {{/each}}
-    {{/each}}
+    {{#each context.menus.setting-up-a-charity ~}}
+    <a class="menu-level-1 mdc-button mdc-button--raised{{#if match ~}} mdc-button--active{{/if ~}}" href="{{path}}">{{{label}}}</a>
+    {{#each this.children ~}}
+    <a class="menu-level-2 mdc-button mdc-button--raised{{#if match ~}} mdc-button--active{{/if ~}}" href="{{path}}">{{{label}}}</a>
+    {{#each this.children ~}}
+    <a class="menu-level-3 mdc-button mdc-button--raised{{#if match ~}} mdc-button--active{{/if ~}}" href="{{path}}">{{{label}}}</a>
+    {{#each this.children ~}}
+    <a class="menu-level-4 mdc-button mdc-button--raised{{#if match ~}} mdc-button--active{{/if ~}}" href="{{path}}">{{{label}}}</a>
+    {{/each ~}}
+    {{/each ~}}
+    {{/each ~}}
+    {{/each ~}}
 </nav>
 
 {{> sidebar_running}}
