--- a/functions/test-db/json2/scvo/templates/events/event-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-digital.hbs
@@ -1,5 +1,5 @@
 <div class="event">
-    {{> header_splash}}
+    {{> header_splash_event}}
     <div class="container-fluid page-content">
         {{#> handle_404}}
         {{#with primaryResponse.hits.hits.[0]._source}}
