--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -335,9 +335,11 @@ primary-dark: #251032
     }
     .mdc-simple-menu .mdc-list-item:after,
     .mdc-simple-menu .mdc-list-item:before,
-    .splash-image .header-caption,
     .mdc-theme--primary-overlay-start-bg {
         background-color: map-get($themeSelected, 'primary-overlay-start');
+    }
+    .splash-image .header-caption {
+        background-color: rgba(0,0,0,0.7);
     }
     .mdc-theme--primary-light-bg {
         background-color: map-get($themeSelected, 'primary-light') !important;
