--- a/functions/test-db/json2/digitalparticipation/layouts/default.hbs
+++ b/functions/test-db/json2/digitalparticipation/layouts/default.hbs
@@ -23,8 +23,8 @@
     <meta name="msapplication-TileImage" content="https://storage.googleapis.com/digitalparticipation/images/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
     <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/material-components-web.min.css">
-    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/fonts/fontawesome/css/fontawesome-all.min.css">
-    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/digitalparticipation-styles.css">
+    <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/css/digitalparticipation-styles.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-27"></script>
     <script>
@@ -168,7 +168,7 @@
     	data-cookie="CookieInfoScript"
     	data-text-align="left">
     </script>
-    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/digitalparticipation/root.js"></script>
+    <script type="text/javascript" src="/assets/js/digitalparticipation/root.js"></script>
     <!--{section:foot}-->
 </body>
 </html>
