--- a/functions/test-db/json2/humanrightsdeclaration/layouts/default.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/layouts/default.hbs
@@ -24,8 +24,8 @@
     <meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
     <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/material-components-web.min.css">
-    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/fonts/fontawesome/css/fontawesome-all.min.css">
-    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/humanrightsdeclaration-styles.css">
+    <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/css/humanrightsdeclaration-styles.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-27"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -163,7 +163,7 @@
     	data-cookie="CookieInfoScript"
     	data-text-align="left">
     </script>
-    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/humanrightsdeclaration/root.js"></script>
+    <script type="text/javascript" src="/assets/js/humanrightsdeclaration/root.js"></script>
     <!--{section:foot}-->
 </body>
 </html>
