--- a/functions/test-db/json2/scvo/layouts/default.hbs
+++ b/functions/test-db/json2/scvo/layouts/default.hbs
@@ -36,7 +36,12 @@
             event_category: '{{_type}}',
             event_label: '{{_id}}'
         });
-        {{/each}}
+    {{/each}}
+
+    {{#if route.params.query.debug}}
+        console.log('#### DEBUG MODE ON ####');
+        console.log('Route:', {{{regexReplace (regexReplace (stringify route) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+    {{/if}}
     </script>
     <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/material-components-web.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
