--- a/functions/test-db/json2/scvo/partials/header-splash-event.hbs
+++ b/functions/test-db/json2/scvo/partials/header-splash-event.hbs
@@ -8,12 +8,21 @@
                     <h1 class="header-text">
                         <span class="header-text-banner">
                             {{#if primaryResponse.hits.hits.[0] ~}}
-                                {{#unless primaryResponse.hits.hits.[0]._source.hide_overlay ~}}
-                                    {{{primaryResponse.hits.hits.[0]._source.title}}}
-                                    <!-- { {#if primaryResponse.hits.hits.[0]._source.date_start ~}}
-                                    – { { {momentFormat (moment primaryResponse.hits.hits.[0]._source.date_start) "Do MMMM YYYY"}}}
-                                    { {/if ~}} -->
-                                {{/unless ~}}
+                                {{#with primaryResponse.hits.hits.[0]._source ~}}
+                                    {{#unless hide_overlay ~}}
+                                        {{{title}}}
+                                        {{#ifAny date_start city ~}}
+                                        <span class="mdc-typography--caption">
+                                            {{#if date_start ~}}
+                                            {{{momentFormat (moment date_start "x") "Do MMMM YYYY"}}},
+                                            {{/if ~}}
+                                            {{#if city ~}}
+                                            {{{city}}}
+                                            {{/if ~}}
+                                            </span>
+                                        {{/ifAny ~}}
+                                    {{/unless ~}}
+                                {{/with}}
                             {{else}}
                                 404: Not found
                             {{/if ~}}
