--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -3341,6 +3341,15 @@ footer {
             margin: 0 !important;
         }
     }
+    .scvo-staff.list {
+        word-wrap: break-word;
+        // margin-bottom: $unit/2;
+        border-bottom: 1px solid rgba(0,0,0,0.2);
+        padding-bottom: $unit/2;
+    }
+    .scvo-staff.list:last-child {
+        border-bottom: none;
+    }
     .breadcrumbs {
         font-size: 85%;
     }
