--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -44,19 +44,19 @@
                                 <a href="/the-gathering">The Gathering</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                                <a href="/jobs/community-jobs-scotland/information-for-employers/become-an-employer">Become a CJS employer</a>
+                                <a href="/scottish-charity-awards">Scottish Charity Awards</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                 <a href="/running-your-organisation/business-planning/writing-business-plan">Writing a business plan</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                                <a href="/running-your-organisation/governance/roles-responsibilities">Governance roles & responsibilites</a>
+                                <a href="/jobs/community-jobs-scotland/information-for-employers/become-an-employer">Become a CJS employer</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                 <a href="/setting-up-a-charity/write-your-constitution">Write your constitution</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                                <a href="/setting-up-a-charity/frequently-asked-questions">Setting up a charity FAQs</a>
+                                <a href="/running-your-organisation/governance/roles-responsibilities">Governance roles & responsibilites</a>
                             </div>
                         </div>
                     </div>
