--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1794,6 +1794,7 @@ section.search {
         color: white;
         font-size: 1.5rem;
         padding: $unit 0;
+        margin: 0;
     }
     .mdc-button {
         text-transform: none;
@@ -1833,7 +1834,7 @@ section.search {
         .container-fluid {
             overflow: visible;
             .mdc-layout-grid {
-                margin-left: 5%;
+                margin: $unit*1.5 0 $unit*1.5 4%;
                 width: 39%;
                 h1.header-text {
                     font-size: 4.8rem;
