--- a/functions/test-db/json2/scvo/templates/events/event-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-booking.hbs
@@ -15,7 +15,7 @@
                         <iframe src="https://www.surveygizmo.eu/s3/90055302/Events-Booking-Training-Events?sfid={{Id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
                         {{else}}
                         <iframe src="https://www.surveygizmo.eu/s3/90066146/Event-Booking-Events?sfid={{Id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
-                        {{/if}}
+                        {{/compare}}
 
                         {{#compare course_type "===" "Training Course"}}
                         <p>
