--- a/functions/test-db/json2/scvo/templates/events/event-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-digital.hbs
@@ -23,6 +23,9 @@
             </p>
             {{/compare}}
         </div>
+
+        {{{rendered.scvo_speakers}}}
+
         {{/with}}
 
         <div class="mdc-layout-grid related">
