--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -940,11 +940,15 @@ section.search {
         }
     }
 }
+.projects .search_form .search-button-large,
 .jobs-landing .search_form .search-button-large,
 .mdc-card.search .search_form .search-button-large,
 .mdc-card-search .search_form .search-button-large {
     top: 0.35rem;
     right: 0.4rem;
+}
+.grant-search .mdc-textfield {
+    position: relative;
 }
 .jobs-landing {
     .page-content {
@@ -1825,9 +1829,9 @@ section.search {
         }
     }
 }
-.about.staff-team .splash-image .header-text .mdc-typography--caption .organisation {
-    display: none;
-}
+.splash-image-scvo-grant-charter h1.header-text,
+.splash-image-scvo-grant-ccrf h1.header-text,
+.splash-image-scvo-grant-cyber h1.header-text,
 .splash-image-scvo-event h1.header-text,
 .splash-image-scvo-cms-post h1.header-text,
 .splash-image-scvo-document-general h1.header-text,
@@ -1953,6 +1957,7 @@ body.scottish-charity-awards {
 .post-sidebar .page-info,
 .page-sidebar .page-info,
 body.the-gathering .page-info,
+.grant-content .page-info,
 .scvo-cms-page-20040 .page-info,
 .scvo-cms-page-20027 .page-info,
 .scvo-cms-page-20043 .page-info,
@@ -1968,6 +1973,9 @@ body.the-gathering .page-info,
 .policy-research.briefings-consultation-responses .mdc-card__actions,
 .policy-research.research .mdc-card__actions,
 .post.author .post-info-author,
+.digital.about .page-info,
+.sidebar .list .post-info-author,
+.about.staff-team .splash-image .header-text .mdc-typography--caption .organisation,
 .press-media .mdc-card__actions,
 .press-media .sidebar h3.blogs {
     display: none;
@@ -2036,9 +2044,6 @@ body.the-gathering .page-info,
     }
 }
 .digital.about {
-    .page-info {
-        display: none;
-    }
     .scvo-staff-photo-wee {
         height: 64px;
         width: 64px;
@@ -2878,11 +2883,6 @@ ul.supplimentary-list {
 }
 .mdc-card__primary+.mdc-card__supporting-text {
     margin-top: 0;
-}
-.sidebar .list {
-    .post-info-author {
-        display: none;
-    }
 }
 .sidebar .author-about,
 .content .supplimentary-list {
