Charity awards gallery

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -510,31 +510,31 @@ primary-dark: #251032
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/THEGATHERING-23.02.17_0253.jpg');
     }
     .scottish-charity-awards .callout-image.charity-awards-1 {
-        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/ENABLE-Scotland-Cracking-Campaign-2.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/24169/ENABLE-Scotland-Cracking-Campaign-2_crop.jpg');
     }
     .scottish-charity-awards .callout-image.charity-awards-2 {
-        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Street-Soccer-Scotland-Charity-of-the-Year.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/24173/Street-Soccer-Scotland-Charity-of-the-Year_crop.jpg');
     }
     .scottish-charity-awards .callout-image.charity-awards-3 {
-        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Drake-Music-Scotland-Demonstrating-Digital-Winners.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/24167/Drake-Music-Scotland-Demonstrating-Digital-Winners_crop.jpg');
     }
     .scottish-charity-awards .callout-image.charity-awards-4 {
-        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Celine-Sinclair-The-Yard-Leading-Light.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/24165/Celine-Sinclair-The-Yard-Leading-Light_crop.jpg');
     }
     .scottish-charity-awards .callout-image.charity-awards-5 {
-        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/dates-n-mates-C-change-Scotland-Pioneering-Project.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/24166/dates-n-mates-C-change-Scotland-Pioneering-Project_crop.jpg');
     }
     .scottish-charity-awards .callout-image.charity-awards-6 {
-        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Dunaverty-Hall-Committee-Celebrating-Communities.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/24168/Dunaverty-Hall-Committee-Celebrating-Communities_crop.jpg');
     }
     .scottish-charity-awards .callout-image.charity-awards-7 {
-        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Gordons-Fightback-MND-Scotland-Peoples-Choice-Award.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/24170/Gordons-Fightback-MND-Scotland-Peoples-Choice-Award_crop.jpg');
     }
     .scottish-charity-awards .callout-image.charity-awards-8 {
-        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/James-Campbell-Bobath-Scotland-Terrific-Trustee-1.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/24171/James-Campbell-Bobath-Scotland-Terrific-Trustee-1_crop.jpg');
     }
     .scottish-charity-awards .callout-image.charity-awards-9 {
-        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Laura-Young-Teapot-Trust-Charity-Champion.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/24172/Laura-Young-Teapot-Trust-Charity-Champion_crop.jpg');
     }
     .community-jobs-scotland .callout-image.saltire {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/saltire.jpg');
@@ -696,6 +696,7 @@ primary-dark: #251032
 .list.scvo-cms-post,
 .breadcrumbs,
 .page-content,
+.grant-content,
 .page-related,
 .page-sidebar .static-sidebar,
 .page-sidebar.static-sidebar,
@@ -3367,6 +3368,9 @@ footer {
             padding: 0 !important;
             margin: 0 !important;
         }
+    }
+    .cjs-search-list .mdc-layout-grid__cell .list {
+        column-count: 1;
     }
     .scvo-staff.list {
         word-wrap: break-word;
