--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2675,12 +2675,12 @@ body.post.author {
 
 // Hide CU members site
 #credit-union-menu {
-    a:nth-child(2),
-    a:nth-child(6),
-    a:nth-child(7),
-    a:nth-child(8) {
-        display: none;
-    }
+    // a:nth-child(2),
+    // a:nth-child(3),
+    // a:nth-child(8),
+    // a:nth-child(11) {
+    //     display: none;
+    // }
 }
 
 .mdc-simple-menu {
