styling improvement on home page

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1077,6 +1077,12 @@ section.search {
                 }
             }
         }
+        .featured-info-summary {
+            margin-top: -$unit*3.1;
+            .post-info {
+                padding-bottom: $unit;
+            }
+        }
     }
     .featured {
         .mdc-card__supporting-text {
@@ -3461,8 +3467,13 @@ footer {
 }
 
 @media screen and (max-width: 479px) {
-    .home .featured-content .featured-background-image img.header-text {
-        margin-right: 0
+    .home .featured-content {
+        .featured-background-image img.header-text {
+            margin-right: 0;
+        }
+        .featured-info-summary {
+            margin-top: 0;
+        }
     }
     .digital {
         .latest_content {
