--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1256,6 +1256,14 @@ section.search {
         font-weight: 400;
     }
 }
+.digital .gist {
+    .mdc-layout-grid__cell--span-3-desktop {
+        grid-column-end: span 3;
+    }
+    .mdc-layout-grid__cell--span-9-desktop {
+        grid-column-end: span 9;
+    }
+}
 .post-related {
     border-top: 1px solid rgba(0,0,0,.2);
 }
