Removed column overrides

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1206,12 +1206,12 @@ section.search {
 }
 .gist {
     padding-top: $unit;
-    .mdc-layout-grid__cell--span-3-desktop {
-        grid-column-end: span 2;
-    }
-    .mdc-layout-grid__cell--span-9-desktop {
-        grid-column-end: span 10;
-    }
+    // .mdc-layout-grid__cell--span-3-desktop {
+    //     grid-column-end: span 2;
+    // }
+    // .mdc-layout-grid__cell--span-9-desktop {
+    //     grid-column-end: span 10;
+    // }
     .mdc-card__subtitle {
         margin-top: $unit/4;
     }
@@ -1256,14 +1256,14 @@ section.search {
         font-weight: 400;
     }
 }
-.digital .gist {
-    .mdc-layout-grid__cell--span-3-desktop {
-        grid-column-end: span 3;
-    }
-    .mdc-layout-grid__cell--span-9-desktop {
-        grid-column-end: span 9;
-    }
-}
+// .digital .gist {
+//     .mdc-layout-grid__cell--span-3-desktop {
+//         grid-column-end: span 3;
+//     }
+//     .mdc-layout-grid__cell--span-9-desktop {
+//         grid-column-end: span 9;
+//     }
+// }
 .post-related {
     border-top: 1px solid rgba(0,0,0,.2);
 }
@@ -2045,12 +2045,12 @@ body.the-gathering .page-info,
         .mdc-layout-grid__inner {
             grid-gap: 0;
         }
-        .mdc-layout-grid__cell--span-2-desktop {
-            grid-column-end: span 3;
-        }
-        .mdc-layout-grid__cell--span-10-desktop {
-            grid-column-end: span 9;
-        }
+        // .mdc-layout-grid__cell--span-2-desktop {
+        //     grid-column-end: span 3;
+        // }
+        // .mdc-layout-grid__cell--span-10-desktop {
+        //     grid-column-end: span 9;
+        // }
         .gist,
         .digital-blogs {
             padding-right: $unit/2;
@@ -3250,14 +3250,14 @@ footer {
 }
 
 @media screen and (max-width: 1340px) {
-    .gist {
-        .mdc-layout-grid__cell--span-3-desktop {
-            grid-column-end: span 3;
-        }
-        .mdc-layout-grid__cell--span-9-desktop {
-            grid-column-end: span 9;
-        }
-    }
+    // .gist {
+    //     .mdc-layout-grid__cell--span-3-desktop {
+    //         grid-column-end: span 3;
+    //     }
+    //     .mdc-layout-grid__cell--span-9-desktop {
+    //         grid-column-end: span 9;
+    //     }
+    // }
     .home {
         .splash-image.hello .container-fluid .mdc-layout-grid h1.header-text {
             font-size: 4rem;
