--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -3212,8 +3212,10 @@ footer {
         }
     }
     .fa-ul,
-    .mdc-list {
-        font-size: 1.1rem;
+    .mdc-list,
+    .mdc-list-item {
+        font-size: inherit;
+        letter-spacing: 0;
     }
     .fa-ul {
         margin: 0 0 0 1.5rem;
